# AutoDocker

./: README.md  pyproject.toml
src/: cli.py  commands.py  docker_utils.py  metadata.py  setup.py
src/autodocker/: cli.py  commands.py  docker_utils.py  git_utils.py  naming.py
src/autodocker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
